名前や写真、文章の差し替え 2

--- a/index.html
+++ b/index.html
@@ -125,10 +125,34 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>
-                        私の趣味はスニーカー、サッカー観戦、カメラ、ディズニーなどです。最近のマイブームはお気に入りのスニーカーを履いて出かけることです！<br>
-                        サッカーは川崎フロンターレが好きで現地で観戦したりもします。
+                        私の趣味はスニーカー、関ジャニ∞、サッカー観戦、筋トレ、カメラ、ディズニーなどです。最近のマイブームはお気に入りのスニーカーを履いて出かけることです！<br>
+                        ライブに行ったりサッカー観戦したりとアクティブに活動している事が多いです！<br>
+                        サッカーは川崎フロンターレが好きで現地で観戦したりもします。<br>
                         家では、アニメを見たり料理をしたりと充実した日々を過ごしています。
                     </p>
+                    <div class="container mt-4">
+                        <div class="row gy-4">
+                            <div class="col-lg-4 col-sm-6">
+                                <img src="assets/img/smoke gray.jpg" alt="smokegray" class="album">
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <img src="assets/img/head to head.JPG" alt="headtohead" class="album">
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <img src="assets/img/orangelobster.JPG" alt="orangelobster" class="album">
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <img src="assets/img/frontale.JPEG" alt="frontale" class="album">
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <img src="assets/img/disney.jpg" alt="disney" class="album">
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <img src="assets/img/eight.jpg" alt="eight" class="album">
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </section>
 
